Связываем слой контроллеров (controller layer) с сервисным слоем (service layer)
1. Внедряем бины сервисного слоя (InMemory-реализации PersonService и TaskServive) в контроллеры PersonController и TaskController
2. Убираем заглушки с конечных точек Rest-контроллеров и перенаправляем запросы сервисному слою
3. Исправляем функциональные тесты для Rest-контроллеров с учетом проброса запросов в сервисный слой реализованного на InMemory-кэше
