# src/main/java/ru/ssv/delphin/api/PersonsApi.java
@@ -5,6 +5,7 @@
  */
 package ru.ssv.delphin.api;
 
+import ru.ssv.delphin.api.model.Person;
 import ru.ssv.delphin.api.model.PersonResponse;
 import ru.ssv.delphin.api.model.PersonsResponse;
 import ru.ssv.delphin.api.model.TasksResponse;
@@ -23,7 +24,7 @@ import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-05-06T14:15:57.242208+03:00[Europe/Moscow]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-05-11T17:45:19.403803+03:00[Europe/Moscow]")
 @Validated
 @Api(value = "persons", description = "the persons API")
 public interface PersonsApi {
@@ -103,5 +104,32 @@ public interface PersonsApi {
         produces = { "application/json" }
     )
     ResponseEntity<PersonResponse> getById(@ApiParam(value = "Идентификатор пользователя",required=true) @PathVariable("personId") String personId);
+
+
+    /**
+     * POST /persons
+     * Добавление нового пользователя
+     *
+     * @param person Пользователь (required)
+     * @return Успешный ответ (status code 201)
+     *         or Not Found (status code 404)
+     *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     *         or Forbidden (status code 403)
+     */
+    @ApiOperation(value = "", nickname = "savePerson", notes = "Добавление нового пользователя", response = PersonResponse.class, tags={ "Post person", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 201, message = "Успешный ответ", response = PersonResponse.class),
+        @ApiResponse(code = 404, message = "Not Found"),
+        @ApiResponse(code = 400, message = "Bad Request"),
+        @ApiResponse(code = 401, message = "Unauthorized"),
+        @ApiResponse(code = 403, message = "Forbidden") })
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/persons",
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    ResponseEntity<PersonResponse> savePerson(@ApiParam(value = "Пользователь" ,required=true )  @Valid @RequestBody Person person);
 
 }
